// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkButton default renders correctly 1`] = `
<DocumentFragment>
  .c0 {
  display: inline-block;
  overflow: hidden;
  height: 2.85em;
  padding: 0 2.5em;
  border: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #595C68;
  border-radius: 8px;
  color: #fff;
  cursor: pointer;
  font-weight: 600;
  line-height: 2.85em;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  -webkit-transition-property: background-color,color;
  transition-property: background-color,color;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  white-space: nowrap;
}

.c0:active,
.c0:hover {
  background-color: #8b8e9c;
}

.c0:active {
  background-color: #2a2b31;
}

.c0:disabled {
  box-shadow: inset 0 -0.15em 0 0 rgba(0,0,0,0.15);
  opacity: 0.25;
  pointer-events: none;
}

<a
    class="c0"
    href="/engineering/ux#example-list"
  >
    Get Started
  </a>
</DocumentFragment>
`;

exports[`LinkButton large renders correctly 1`] = `
<DocumentFragment>
  .c0 {
  display: inline-block;
  overflow: hidden;
  height: 2.85em;
  padding: 0 2.5em;
  border: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #595C68;
  border-radius: 8px;
  color: #fff;
  cursor: pointer;
  font-weight: 600;
  line-height: 2.85em;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  -webkit-transition-property: background-color,color;
  transition-property: background-color,color;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  white-space: nowrap;
  font-size: 1.35em;
  line-height: 2.825em;
}

.c0:active,
.c0:hover {
  background-color: #8b8e9c;
}

.c0:active {
  background-color: #2a2b31;
}

.c0:disabled {
  box-shadow: inset 0 -0.15em 0 0 rgba(0,0,0,0.15);
  opacity: 0.25;
  pointer-events: none;
}

<a
    class="c0"
    href="/engineering/ux#example-list"
    large="true"
  >
    Get Started
  </a>
</DocumentFragment>
`;

exports[`LinkButton primary renders correctly 1`] = `
<DocumentFragment>
  .c0 {
  display: inline-block;
  overflow: hidden;
  height: 2.85em;
  padding: 0 2.5em;
  border: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #595C68;
  border-radius: 8px;
  color: #fff;
  cursor: pointer;
  font-weight: 600;
  line-height: 2.85em;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  -webkit-transition-property: background-color,color;
  transition-property: background-color,color;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  white-space: nowrap;
  background-color: #4bb2b6;
}

.c0:active,
.c0:hover {
  background-color: #8b8e9c;
}

.c0:active {
  background-color: #2a2b31;
}

.c0:disabled {
  box-shadow: inset 0 -0.15em 0 0 rgba(0,0,0,0.15);
  opacity: 0.25;
  pointer-events: none;
}

.c0:hover {
  background-color: #6fc2c5;
  color: #fff;
}

.c0:active {
  background-color: #2d6c6e;
}

<a
    class="c0"
    href="/engineering/ux#example-list"
    primary="true"
  >
    Get Started
  </a>
</DocumentFragment>
`;

exports[`LinkButton small renders correctly 1`] = `
<DocumentFragment>
  .c0 {
  display: inline-block;
  overflow: hidden;
  height: 2.85em;
  padding: 0 2.5em;
  border: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #595C68;
  border-radius: 8px;
  color: #fff;
  cursor: pointer;
  font-weight: 600;
  line-height: 2.85em;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  -webkit-transition-property: background-color,color;
  transition-property: background-color,color;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  white-space: nowrap;
  font-size: 0.8em;
  line-height: 3em;
}

.c0:active,
.c0:hover {
  background-color: #8b8e9c;
}

.c0:active {
  background-color: #2a2b31;
}

.c0:disabled {
  box-shadow: inset 0 -0.15em 0 0 rgba(0,0,0,0.15);
  opacity: 0.25;
  pointer-events: none;
}

<a
    class="c0"
    href="/engineering/ux#example-list"
    small="true"
  >
    Get Started
  </a>
</DocumentFragment>
`;
